@@ -1,3 +1,7 @@
+2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* pp/opreport.cpp: re write using count_array_t
+
 2003-08-11  John Levon  <levon@movementarian.org>
 
 	* libpp/count_array.cpp:
